# AI-201

./: GeminiFunctionCallingWithRAGChromaDb.ipynb  Gemini_API_Model_tuning_with_Python.ipynb  Readme.md
assignments/assignment-01/: Readme.md
assignments/assignment-02/: Readme.md
assignments/assignment-03/: Readme.md
assignments/assignment-04/: Readme.md
assignments/assignment-05/: Readme.md
assignments/assignment-06/: readme.md
assignments/assignment-07/: Readme.md
assignments/assignment-08/: Readme.md
assignments/assignment-09/: Readme.md
assignments/assignment-10/: Readme.md
assignments/assignment-11/: Readme.md
class01-20241201/: Readme.md
class02-20241208/: 2.1. What are API's_ .ipynb  2.2. gpt_4o_mini_demo.ipynb  Readme.md
class03-20241215/: 3_04_gemini_api_demo.ipynb  3_05_Agentic_AI_trillion_doolar_opportunity.md  3_09_tsmc.md  3_10_agi.md  3_11_compound_ai_systems.md  3_12_agentic_AI_stack.md  3_13_next_wave_humaniods.md  3_14_cloud_and_edge.md  3_15_microservices_ai_agents.md  3_16_ray.md  3_17_ai_economics.md  3_18_agi_light_speed.md  Readme.md
class04-20241222/: 4_01_gemini_2_0.md  4_04_prologue.md  4_05_what_is_a_gpu.md  4_06_blackwell_gpus.md  4_07_cuda.md  4_09_agi.md  4_2_Gemini_2_0_Flash.ipynb  4_3_aisuite.ipynb  Readme.md
class05-20241229/: class_4.ipynb
class06-20250105/rag/: CSVRag.ipynb  fun_activity.md  ragpdf.ipynb
class07-20250112/: Function_Calling_with_LangChain.ipynb  LangChain_Tool_Explanation.md  Tool_calling.md
class08-20250119/: data.csv
class09-20240126/: LiteLLM.ipynb
class09-20240126/llmlite/: pyproject.toml
class09-20240126/llmlite/src/llmlite/: __init__.py  main.py
class09-20240126/my_00_uv/: pyproject.toml
class09-20240126/my_00_uv/src/my_00_uv/: main.py
class09-20240126/my_new_flow/: .gitignore
class09-20240126/python-decorators/: pyproject.toml
class09-20240126/python-decorators/src/python_decorators/: __init__.py  main.py
class09-20240126/uv-explore/: pyproject.toml
class09-20240126/uv-explore/src/uv_explore/: __init__.py  hello.py
class10-20240202/latest_ai_development/: README.md  report.md
class10-20240202/my_new_flow/: poem.txt  pyproject.toml
class10-20240202/my_project_crew/: README.md  pyproject.toml
class11-20240209/basic_flow/: README.md  pyproject.toml
class11-20240209/my_flow/: pyproject.toml
class11-20240209/parallelization_and/: README.md  pyproject.toml
class11-20240209/parallelization_or/: README.md  pyproject.toml
class11-20240209/parallelization_or/src/parallelization_or/: main.py
class11-20240209/prompt_chaining/: README.md  pyproject.toml
class11-20240209/prompt_chaining/src/prompt_chaining/: main.py
class11-20240209/routing/: README.md  pyproject.toml
class12-20240216/confidence_based_escalation/: README.md  pyproject.toml
class12-20240216/confidence_based_escalation/src/confidence_based_escalation/: main.py
class12-20240216/evaluator_optimizer/: README.md  pyproject.toml
class12-20240216/evaluator_optimizer/src/evaluator_optimizer/: main.py
class12-20240216/meta‑cognitive/: README.md  pyproject.toml
class12-20240216/multi‑agent_collaboration/: README.md  pyproject.toml
class12-20240216/multi‑agent_collaboration/src/multi‑agent_collaboration/: main.py
class12-20240216/orchestrator/: README.md  pyproject.toml
class12-20240216/orchestrator/src/orchestrator/: main.py
class12-20240216/patterns01/: README.md  pyproject.toml
class12-20240216/patterns02/: README.md  pyproject.toml
class12-20240216/retrieval_augmentation_loop/: README.md  pyproject.toml
class12-20240216/retrieval_augmentation_loop/src/retrieval_augmentation_loop/: main.py
class13-20240222/crewai_with_tools/: README.md  pyproject.toml
class13-20240222/crewai_with_tools/db/: chroma.sqlite3
class13-20240222/crewai_with_tools/src/crewai_with_tools/: main.py
class13-20240222/crewai_with_tools/src/crewai_with_tools/crews/research_writer_crew/: research_writer_crew.py
class13-20240222/crewai_with_tools/src/crewai_with_tools/crews/research_writer_crew/config/: agents.yaml  tasks.yaml
class13-20240222/crews_agents_and_tasks_in_crewai/: README.md  poem.txt  pyproject.toml
class13-20240222/crews_agents_and_tasks_in_crewai/src/crews_agents_and_tasks_in_crewai/: main.py
class13-20240222/knowledge_and_rag/: README.md  crewai_flow.html  pyproject.toml
class13-20240222/knowledge_and_rag/knowledge/: user_preference.txt
class13-20240222/knowledge_and_rag/src/knowledge_and_rag/: main.py
class13-20240222/knowledge_and_rag/src/knowledge_and_rag/crews/user_crew/: user_crew.py
class13-20240222/knowledge_and_rag/src/knowledge_and_rag/crews/user_crew/config/: agents.yaml  tasks.yaml
projects/: project_proposals.md  updated_project_proposals.md
projects/project01/: Readme.md
projects/project02/: Readme.md
projects/project_propsal/: AI Diagnosis Assistant .md  AI Event Marketing Using Generative AI.md  AI Powered Customer Service Agent for E-commerce Business.md  AI Powered Travel Itinerary Planner.md  AI Solution for Lending.md  AI Voiceover Generator.md  AI personalized Tutor.md  AI- based social catalyst.md  AI-Powered Crypto Trading Bot.md  AI-Powered Customer Support Agent.md  AI-Powered Doctor Booking Agent.md  AI-Powered Educational Agent for Interest and Intellect base Syllabus Generation and Career Coaching.md  AI-Powered Educational Tutor.md  AI-Powered English Language Learning Assistant.md  AI-Powered Gym Management System.md  AI-Powered LinkedIn Content Generator.md  AI-Powered LinkedIn Content Generator2.md  AI-Powered Personalized Fitness, Diet Planner and Medical Assistant.md  AI-Powered Personalized Fitness, Diet Planner, and Medical Assistant.md  AI-Powered Resume Reviewer.md  AI-Powered Traveling Agent.md  AI-Powered Trip Planner: Smart Travel Planning for Seamless Adventures.md  AICPC- AI Medical Coding for Neurosurgery.md  AI_powered_trip_planner.md  Agentic RAG Workflow Using Crew AI.md  Ai Powered customer support Agent.md  Ai study buddy.md  DaastanAi.md  (+14 more)
rag/: .env._example  README.md  [1]_rag_setup_overview.ipynb  requirements.txt
(+39 files in other folders)
