[project]
name = "my-00-uv"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Hassan Ali Khan", email = "73381969+hassan-ak@users.noreply.github.com" }
]
requires-python = ">=3.12"
dependencies = []

[project.scripts]
my-00-uv = "my_00_uv:main"
greet = "my_00_uv.main:greet"
hello = "my_00_uv.main:hello"



[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
