[project]
name = "parallelization_or"
version = "0.1.0"
description = "parallelization_or using crewAI"
authors = [{ name = "Your Name", email = "you@example.com" }]
requires-python = ">=3.10,<3.13"
dependencies = [
    "crewai[tools]>=0.100.0,<1.0.0",
]

[project.scripts]
kickoff = "parallelization_or.main:kickoff"
plot = "parallelization_or.main:plot"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.crewai]
type = "flow"
