[project]
name = "prompt_chaining"
version = "0.1.0"
description = "prompt_chaining using crewAI"
authors = [{ name = "Your Name", email = "you@example.com" }]
requires-python = ">=3.10,<3.13"
dependencies = [
    "crewai[tools]>=0.100.0,<1.0.0",
]

[project.scripts]
kickoff = "prompt_chaining.main:kickoff"
plot = "prompt_chaining.main:plot"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.crewai]
type = "flow"
