[project]
name = "confidence_based_escalation"
version = "0.1.0"
description = "confidence-based-escalation using crewAI"
authors = [{ name = "Your Name", email = "you@example.com" }]
requires-python = ">=3.10,<3.13"
dependencies = [
    "crewai[tools]>=0.100.0,<1.0.0",
]

[project.scripts]
kickoff = "confidence_based_escalation.main:kickoff"
plot = "confidence_based_escalation.main:plot"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.crewai]
type = "flow"
