[project]
name = "evaluator_optimizer"
version = "0.1.0"
description = "evaluator-optimizer using crewAI"
authors = [{ name = "Your Name", email = "you@example.com" }]
requires-python = ">=3.10,<3.13"
dependencies = [
    "crewai[tools]>=0.100.0,<1.0.0",
]

[project.scripts]
kickoff = "evaluator_optimizer.main:kickoff"
plot = "evaluator_optimizer.main:plot"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.crewai]
type = "flow"
