[project]
name = "multi‑agent_collaboration"
version = "0.1.0"
description = "multi‑agent-collaboration using crewAI"
authors = [{ name = "Your Name", email = "you@example.com" }]
requires-python = ">=3.10,<3.13"
dependencies = [
    "crewai[tools]>=0.100.0,<1.0.0",
]

[project.scripts]
kickoff = "multi‑agent_collaboration.main:kickoff"
plot = "multi‑agent_collaboration.main:plot"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.crewai]
type = "flow"
