[project]
name = "retrieval_augmentation_loop"
version = "0.1.0"
description = "retrieval-augmentation-loop using crewAI"
authors = [{ name = "Your Name", email = "you@example.com" }]
requires-python = ">=3.10,<3.13"
dependencies = [
    "crewai[tools]>=0.100.0,<1.0.0",
]

[project.scripts]
kickoff = "retrieval_augmentation_loop.main:kickoff"
plot = "retrieval_augmentation_loop.main:plot"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.crewai]
type = "flow"
