[project]
name = "crews_agents_and_tasks_in_crewai"
version = "0.1.0"
description = "crews-agents-and-tasks-in-crewaI using crewAI"
authors = [{ name = "Your Name", email = "you@example.com" }]
requires-python = ">=3.10,<3.13"
dependencies = [
    "crewai[tools]>=0.100.0,<1.0.0",
]

[project.scripts]
kickoff = "crews_agents_and_tasks_in_crewai.main:kickoff"
plot = "crews_agents_and_tasks_in_crewai.main:plot"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.crewai]
type = "flow"
