[project]
name = "knowledge_and_rag"
version = "0.1.0"
description = "knowledge-and-rag using crewAI"
authors = [{ name = "Your Name", email = "you@example.com" }]
requires-python = ">=3.10,<3.13"
dependencies = [
    "crewai[tools]>=0.100.0,<1.0.0",
    "docling>=2.24.0",
    "google-generativeai>=0.8.4",
]

[project.scripts]
kickoff = "knowledge_and_rag.main:kickoff"
plot = "knowledge_and_rag.main:plot"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.crewai]
type = "flow"
